# bili-video-summarizer

./: .env.example  .gitignore  README.md  WAF_TRUST_ISSUE.md  config.yaml.example  pyproject.toml  start-web.ps1  test_412_fix.py  test_e2e_412.py
data/: web.db
src/bili_analyzer/: __init__.py  __main__.py  cli.py  config.py  logger.py  pipeline.py
src/bili_analyzer/analyzer/: __init__.py  base.py  deepseek.py  interactive.py  usage.py  zhipu.py
src/bili_analyzer/api/: auth.py  bilibili.py  wbi.py
src/bili_analyzer/downloader/: ytdlp.py
src/bili_analyzer/parser/: srt.py
src/bili_analyzer/reporter/: markdown.py
src/bili_analyzer/screenshot/: ffmpeg.py
src/bili_analyzer/transcriber/: __init__.py  base.py  cc_subtitle.py  volcengine.py  whisper_local.py  ytdlp_subtitle.py
src/bili_analyzer/ui/: __init__.py  console.py
tests/: benchmark_whisper_models.py  whisper_benchmark_report.md
web/backend/: database.py  main.py  models.py  websocket_manager.py
web/backend/routers/: config.py  reports.py  screenshots.py  tasks.py
web/backend/services/: pipeline_runner.py  task_service.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: Layout.tsx
web/frontend/src/hooks/: useWebSocket.ts
web/frontend/src/pages/: HistoryPage.tsx  HomePage.tsx  ReportPage.tsx  SettingsPage.tsx  TaskPage.tsx
web/frontend/src/services/: api.ts
